Overflow issues fix

--- a/web/egov-common-screen/src/components/Header/index.css
+++ b/web/egov-common-screen/src/components/Header/index.css
@@ -285,7 +285,7 @@ top: 24px;
     }
     #singletestimonial
         {
-            height: 250px;
+            height: 300px;
         }
         #testimonialimg1{
             width: 81%;
