--- a/web/egov-common-screen/src/index.css
+++ b/web/egov-common-screen/src/index.css
@@ -1,5 +1,7 @@
 html{
   height: 100%;
+  margin:0;
+  padding:0;
 }
 
 @font-face {
@@ -13,14 +15,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #E5E5E5;
-  overflow-x: hidden;
+  margin:0;
+  padding:0;
 }
+
+#root{
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  overflow-x: hidden; 
+  }
 @media only screen and (max-width: 1024px) {
 
-  #root
+/*   #root
 {
   overflow-x: hidden;
-}  
+}  */ 
 }
 
 a:hover, a:visited, a:link, a:active
